# VoiceAssistUI

./: .gitignore  CMakeLists.txt  Icons.qrc  LICENSE  Main.qml  Main.qml.bak  README.md  audioFunctions.js  helper_functions.js  main.cpp  squeezelite.service  voiceassistui.service
Components/: Constants.qml  DetailWeatherCard.qml  DigitalClock.qml  MusicInterface.qml  MyDailyForecastCard.qml  ScrollingText.qml  WeatherItemDetail.qml
data/: openweathermap.json
images/: filename.txt
